# didi-sdc-challenge-2017

./: .gitignore  LICENSE  README.md  explore_udacity_didi_data.ipynb  rosbag_viewer.py  train_nn.ipynb
Notes/: bag-comments.md  timestamp_offsets.csv
data/: tracklet_raw.txt  training_data.csv  training_data_full.csv
nn/: data_reader.py  nn.py  test.py  test_reader.py  train.py
pointcloud_utils/: create_pointcloud_images.py  create_test_pointcloud_images.py  lidar.py  lidar_surround.py  lidar_top.py  show_lidar.py  timestamp_utils.py
python_pointclouds/: pointclouds.py
ros_packages/devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
ros_packages/devel/lib/pkgconfig/: sdc_obstacle_detector.pc
ros_packages/devel/share/sdc_obstacle_detector/cmake/: sdc_obstacle_detectorConfig.cmake
ros_packages/src/sdc_obstacle_detector/: CMakeLists.txt  package.xml
scripts/: kitti_data_downloader.py
sensor_pipeline/: bag_topic_def.py  extract_pointclouds.py  pointcloud_utils.py
tracklets/: generate_tracklet.py
utils/: draw.py  file.py  kitti_data_downloader.py  kitti_file_list.txt  point_cloud_to_panorama.py  raw_data_downloader.sh  rosviewer.sh
velodyne-tutorials/: Converting-Velodyne-Scans-to-Velodyne-Points.md  Installing-Velodyne-Drivers-On-Ros-Kinetic-Ubuntu-16.04-LTS-Xenial.md
