<?xml version="1.0"?>
<package>
  <name>sdc_obstacle_detector</name>
  <version>0.0.1</version>
  <description>Subscriber to receive packets from SDC sensors and identify obstacles</description>

  <maintainer email="mark@timelapsrobotics.com">Mark Strefford</maintainer>
  <license>BSD-3-Clause</license>
  <url type="website">http://timelapsrobotics.com</url>
  <author email="mark@timelapsrobotics.com">Mark Strefford</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>

  <export></export>
</package>
